; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_demux_mkv.c_test_header_element.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_demux_mkv.c_test_header_element.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.demuxer = type { i32 }
%struct.header_elem = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.demuxer*, i32, i32)* @test_header_element to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_header_element(%struct.demuxer* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.demuxer*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.header_elem*, align 8
  store %struct.demuxer* %0, %struct.demuxer** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load %struct.demuxer*, %struct.demuxer** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %7, align 4
  %12 = call %struct.header_elem* @get_header_element(%struct.demuxer* %9, i32 %10, i32 %11)
  store %struct.header_elem* %12, %struct.header_elem** %8, align 8
  %13 = load %struct.header_elem*, %struct.header_elem** %8, align 8
  %14 = icmp ne %struct.header_elem* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %25

16:                                               ; preds = %3
  %17 = load %struct.header_elem*, %struct.header_elem** %8, align 8
  %18 = getelementptr inbounds %struct.header_elem, %struct.header_elem* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %16
  store i32 1, i32* %4, align 4
  br label %25

22:                                               ; preds = %16
  %23 = load %struct.header_elem*, %struct.header_elem** %8, align 8
  %24 = getelementptr inbounds %struct.header_elem, %struct.header_elem* %23, i32 0, i32 0
  store i32 1, i32* %24, align 4
  store i32 0, i32* %4, align 4
  br label %25

25:                                               ; preds = %22, %21, %15
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local %struct.header_elem* @get_header_element(%struct.demuxer*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
